fixed z-index of nav

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ header {
 	position: fixed;
 	width: 100%;
 	background-color: #24252A;
+	z-index: 1;
 }
 
 .logo {
